# DaftMachine

./: AGENTS.md  README.md  pyproject.toml
app/: config.py  db.py  estimator.py  main.py  scraper.py  service.py
app/templates/: dashboard.html
tests/: test_api.py
