[project]
name = "daftmachine"
version = "0.1.0"
description = "Autonomous Dublin rental yield scanner"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "sqlalchemy>=2.0.35",
  "httpx>=0.27.2",
  "beautifulsoup4>=4.12.3",
  "apscheduler>=3.10.4",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
